--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <h1>Awesome Socket.io Chat</h1>
+  <h1>Socket.io Chat</h1>
   <div id="login">
     <h2>Please enter Username</h2>
     <input id="user" type="text" autofocus/>
