--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
   <div id="crafters"> Fabian Hoffmann | Simon Hintersonnleitner </div>
 
   <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-  <script src="http://code.jquery.com/jquery-1.11.2.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
 
   <script>
     var username;
