--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
     $(function(){
       $('#messageContainer').hide();
     })
-    var socket = io();
+    var socket = io.connect('https://lamp.fabianhoffmann.io', {path: '/mean/socket.io'});
 
 
     $('#connect').click(function(){
